config file & docs setting
